# SAMP-LiteClient

./: .gitignore  CMakeLists.txt  config.xml
.github/workflows/: build.yml
include/: IntervalWorker.h  RakNetWorker.h  ThreadWorker.h  WorkerClass.h  common.h  connectwindow.h  globals.h  logs.h  logswindow.h  main.h  mainwindow.h  math_stuff.h  playbackwindow.h  scorebwindow.h  serverswindow.h  settingswindow.h  utils.h  window.h  xmlsets.h
include/Game/: PlayerPos.h  audiostream.h  cmds.h  dialogs.h  localplayer.h  menus.h  misc_funcs.h  playback.h  recorder.h
include/Networking/: netgame.h  netrpc.h
lib/query/: QueryAPI.cpp  QueryAPI.h
lib/raknet/: BitStream.h  ConcreteRakClient.h  NetworkTypes.h  RakNetCommandParser.cpp  RakNetCommandParser.h  RakPeer.cpp  RakPeerInterface.h  ReliabilityLayer.cpp  SocketLayer.cpp
lib/raknet/SAMP/: SAMPRPC.cpp  SAMPRPC.h  samp_auth.cpp  samp_auth.h  samp_netencr.cpp
lib/raknetOMP/: NetworkTypes.h  RakClient.cpp  RakPeer.h  SAMPRakNet.cpp  SAMPRakNet.hpp
lib/raknet_/: LogCommandParser.cpp  PacketConsoleLogger.cpp  PacketFileLogger.cpp  PacketLogger.cpp
lib/raknet_/SAMP/: samp_auth.cpp  samp_netencr.cpp
logs/: client_log.txt
src/: RakNetWorker.cpp  common.cpp  connectwindow.cpp  logs.cpp  logswindow.cpp  main.cpp  mainwindow.cpp  math_stuff.cpp  playbackwindow.cpp  scorebwindow.cpp  serverswindow.cpp  settingswindow.cpp  utils.cpp  xmlsets.cpp
src/Game/: CAnimationInfo.cpp  PlayerPos.cpp  audiostream.cpp  cmds.cpp  dialogs.cpp  localplayer.cpp  menus.cpp  misc_funcs.cpp  playback.cpp  recorder.cpp  window.cpp
src/Networking/: netgame.cpp  netrpc.cpp
stylesheets/: app.qss
ui/: actionswindow.ui  connectwindow.ui  logswindow.ui  mainwindow.ui  playback.ui  scoreboard.ui  settingswindow.ui
